corrected attributes for start-btn in css file to make the start quiz button smaller and center it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ body {
     border: 1px solid black;
     text-align: center;
     border-radius: 5px;
+    margin: 0px 200px;
 }
 
 .start-btn:hover {
